Adding NFC Scanning & changed QR Scan Settings

--- a/www/index.html
+++ b/www/index.html
@@ -35,27 +35,27 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>Ducky</title>
+    <title>Buck Scanning App</title>
 </head>
 
 <body>
     <div class="app">
         <div class="main" id="main">
-            <h1>Ducky</h1>
+            <h1>Buck Scanning App</h1>
             <h2>Get Your Inventory In A Row</h2>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
             <br />
-            <button id="scanIt">Go to Barcode Scanner</button>
+            <button id="scanIt">Go to QR Scanner</button>
             <button id="scanNFC">Go to NFC Scanner</button>
 
         </div>
         <!--End main-->
 
         <div class="hide" id="scanWait">
-            <h2>Scan Barcode Now</h2>
+            <h2>Scan QR Code Now</h2>
         </div><!--end scanWait-->
 
         <div class="hide" id="scanWaitNFC">
