--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -35,26 +35,84 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>Ducky</title>
+    <title>Buck Scanning App</title>
 </head>
 
 <body>
     <div class="app">
         <div class="main" id="main">
-            <h1>Ducky</h1>
+            <h1>Buck Scanning App</h1>
             <h2>Get Your Inventory In A Row</h2>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
             <br />
-            <button id="scanIt">Begin</button>
+            <button id="scanIt">Go to QR Scanner</button>
+            <button id="scanNFC">Go to NFC Scanner</button>
+
         </div>
         <!--End main-->
 
         <div class="hide" id="scanWait">
-            <h2>Scan Code Now</h2>
+            <h2>Scan QR Code Now</h2>
         </div><!--end scanWait-->
+
+        <div class="hide" id="scanWaitNFC">
+            <h2>Scan NFC Now</h2>
+        </div><!--end scanWaitNFC-->
+
+        <div class="hide" id="pickForm">
+            <button id="goToForm1">Go to Form 1</button>
+            <button id="goToForm2">Go to Form 2</button>
+        </div>
+
+
+        <div class="hide" id="form1">
+            <h1>Test</h1>
+            <form>
+                Scanned Text: <br>
+                <input type="text" name="result-text">
+                <br>
+                Scanned Format: <br>
+                <input type="text" name="result-format">
+                <br>
+                Scanned Cancelled: <br>
+                <input type="text" name="result-cancelled">
+                <br>
+                Pick One:
+                <input type="radio" name="Star Wars"    value="Star Wars"           > Star Wars<br>
+                <input type="radio" name="Star Trek"    value="Star Trek" checked   > Star Trek<br>
+                <input type="radio" name="Stargate"     value="Stargate"            > Stargate
+                <br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div><!--end form-->
+
+        <div class="hide" id="form2">
+                <h1>Davey</h1>
+                <form>
+                    Scanned Text: <br>
+                    <input type="text" name="result-text">
+                    <br>
+                    Scanned Format: <br>
+                    <input type="text" name="result-format">
+                    <br>
+                    Scanned Cancelled: <br>
+                    <input type="text" name="result-cancelled">
+                    <br>
+                    Pick One:
+                    <input type="radio" name="Residential Services"         value="Residential Services"             > Residential Services<br>
+                    <input type="radio" name="Commercial Services"          value="Commercial Services" checked      > Commercial Services<br>
+                    <input type="radio" name="Utility Solutions"            value="Utility Solutions"                > Utility Solutions>br>
+                    <input type="radio" name="Environmental Consulting"     value="Environmental Consulting"         > Environmental Consulting
+
+                    <br><br>
+                    <input type="submit" value="Submit">
+                </form>
+            </div><!--end form-->
+    
+
 
     </div>
     <!--End app-->
