--- a/www/index.html
+++ b/www/index.html
@@ -41,15 +41,18 @@
 <body>
     <div class="app">
         <div class="main" id="main">
-            <h1>Buck Scanning App</h1>
-            <h2>Get Your Inventory In A Row</h2>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+            <div class="title">
+                <h1>Buck Scanning App</h1>
+                <p>Get Your Inventory In A Row</p>
+                <div class="navbar">
+                    <div class="nav_buttons nav_left" id="scanIt">QR Scanner</div>
+                    <div class="nav_buttons nav_right" id="scanNFC">NFC Scanner</div>
+                </div>
             </div>
-            <br />
-            <button id="scanIt">Go to QR Scanner</button>
-            <button id="scanNFC">Go to NFC Scanner</button>
+            <div class="start">
+                <h2>Stuff is down here too</h2>
+            </div>
+            
 
         </div>
         <!--End main-->
