very slight adjustment so scanning actually triggers

--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -59,6 +59,8 @@
                         <button type="button" class="btn btn-primary btn-large" id="scanNFC"><i class="fas fa-wifi"></i> NFC</button>
                     </div>
                 </div>
+
+                <div class="hide" id="scanWait"></div>
             </div>
             
 
