--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,8 @@
                         <button type="button" class="btn btn-primary btn-large" id="scanNFC"><i class="fas fa-wifi"></i> NFC</button>
                     </div>
                 </div>
+
+                <div class="hide" id="scanWait"></div>
             </div>
             
 
